2012-01-03  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Added forgotten call to initialize the 'server session <id>'
	  command.

2012-01-01  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Added null checks for dangerous IGame properties.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang# Console Utils.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-10-18  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Don't uselessly print success messages.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* ConsoleHelper.cs:
	  Forgot to add a command for the new property.

	* AssemblyInfo.cs:
	  

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Adapt to the changes in the interface.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Fixed a typo in the previous revision.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ConsoleHelper.cs:
	  Fixed System.ArgumentOutOfRangeException when backspacing an
	  empty line in the
	  Bang.ConsoleUtils.ConsoleHelper.ReadPassword() method.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* NestedCommand.cs:
	  Automatically convert command text to lowercase.
	Added null check.

	* ConsoleHelper.cs:
	  Added new base for "proxy characters" (like Vera Custer,
	  Greygory Deck).
	Added new response method.
	Added new RequestType values.
	Added new PublicPlayerView property - AdditionalCharacters
	  (the abilities gained by proxy characters).
	New way of getting player victory stats.

2011-09-15  WOnder93  <omosnacek@gmail.com>

	* Command.cs:
	* ICommand.cs:
	* FinalCommand.cs:
	* AssemblyInfo.cs:
	* NestedCommand.cs:
	* ConsoleHelper.cs:
	* Bang# Console Utils.csproj:
	  Complete restructuralisation.

	* ConsoleUtils.cs:
	  
